--- a/index.html
+++ b/index.html
@@ -16,22 +16,29 @@
 
         .heading {
             text-transform: uppercase;
-            font-size: 1.5rem;
+            font-size: 2.8vw;
             letter-spacing: 1px;
         }
 
         .counting {
             border: 5px solid rgba(1, 1, 0, 0.5);
             box-shadow: 0.5px 0.5px 5px 1px;
-            font-size: 4rem;
+            font-size: 5vw;
             color: rgb(3, 24, 219);
             margin-bottom: 35px;
-            padding: 20px 40px;
+            padding: 4vw 5vw;
+        }
+
+        .btns {
+            width: 50vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .btns button {
-            padding: 10px 40px;
-            margin: 10px;
+            padding: 1.5% 3%;
+            margin: 1%;
             border-radius: 5px;
             border: 1px solid black;
             box-shadow: 0.5px 0.5px 2px 1px;
@@ -39,6 +46,20 @@
             font-size: 1.1rem;
             font-weight: bold;
             cursor: pointer;
+        }
+
+        @media screen and (max-width: 580px) {
+            .btns {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 1.5vh;
+            }
+            .btns button {
+                padding: 5px 20px;
+                font-size: 80%;
+            }
         }
 
     </style>
